[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "long-covid-neuropsychiatric"
version = "1.0.0"
description = "Long COVID neuropsychiatric symptoms: global prevalence 2021-2024. DOI: 10.7910/DVN/7LRXMV"
license = {text = "CC0-1.0"}
authors = [{name = "Juan Moises de la Serna", email = "juanmoises.delaserna@gmail.com"}]
keywords = ["long-covid","neuropsychiatric","brain-fog","depression","anxiety"]
requires-python = ">=3.7"
dependencies = ["pandas>=1.3.0","requests>=2.25.0","numpy>=1.20.0"]

[project.urls]
Homepage = "https://github.com/juanmoisesd/long-covid-neuropsychiatric-symptoms-global-2021-2024"
"Dataset DOI" = "https://doi.org/10.7910/DVN/7LRXMV"
